自分ように変更

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
           </h1>
           <div id="logoText" class="top-logo-text">Web Creater</div>
         </div>
+        <a class="btn-link" href="./form/index.html">
+          <div class="btn">ご連絡はこちら</div>
+        </a>
         <div class="top-text">
           <p>あなただけのWebサイトを</p>
         </div>
@@ -142,7 +145,7 @@
         </div>
       </div>
     </header>
-    <section id="work" class="work effect-fade">
+    <!-- <section id="work" class="work effect-fade">
       <div class="banner">
         <div class="inner">
           <h2
@@ -167,7 +170,6 @@
                   <p class="work-detail">
                     BootStrapでレスポンシブサイトをコーディングしました。
                   </p>
-                  <p class="detail pc-only"><a href="">詳しく見る</a></p>
                 </div>
               </li>
               <li class="work-content swiper-slide">
@@ -182,7 +184,6 @@
                   <p class="work-detail">
                     BootStrapでレスポンシブサイトをコーディングしました。
                   </p>
-                  <p class="detail pc-only"><a href="">詳しく見る</a></p>
                 </div>
               </li>
               <li class="work-content swiper-slide">
@@ -197,7 +198,6 @@
                   <p class="work-detail">
                     BootStrapでレスポンシブサイトをコーディングしました。
                   </p>
-                  <p class="detail pc-only"><a href="">詳しく見る</a></p>
                 </div>
               </li>
             </ul>
@@ -207,7 +207,7 @@
             <div class="swiper-scrollbar pc-only"></div>
         </div>
       </div>
-    </section>
+    </section> -->
     <section id="service" class="service effect-fade">
       <div class="banner">
         <div class="inner">
@@ -245,18 +245,6 @@
             </li>
             <li class="service-item">
               <div class="service-item-logo">
-                <i class="fas fa-crop-alt"></i>
-              </div>
-              <p class="service-item-ttl">デザイン</p>
-              <p class="service-item-text">
-                ユーザー目線に立ち、お客様の
-                ご要望を最大限に活かしたデザインを作成することを心がけて
-                おります。サイトデザインの他に、バナー、チラシ・ポスター、名刺作成など幅広く
-                対応いたしております。
-              </p>
-            </li>
-            <li class="service-item">
-              <div class="service-item-logo">
                 <i class="fas fa-shopping-cart"></i>
               </div>
               <p class="service-item-ttl">ECサイト制作</p>
@@ -275,6 +263,24 @@
                 こんなツールがあったらいいな、 こんなシステムがあったらいいな
                 というご要望がありましたら、 なんなりとお伝えください。
                 お客様のご要望に沿った システム・ツール作成を お受けいたします。
+              </p>
+            </li>
+            <li class="service-item">
+              <div class="service-item-logo">
+                <i class="fab fa-twitter-square"></i>
+              </div>
+              <p class="service-item-ttl">SNS運用代行</p>
+              <p class="service-item-text">
+                私自身が、Twitterフォロワー4000人以上、instagramフォロワー1600人以上いまして、月間インプレッションが100万ほどあるので、そのノウハウを生かしてSNSを運用させていただきます。
+              </p>
+            </li>
+            <li class="service-item">
+              <div class="service-item-logo">
+                <i class="fas fa-ad"></i>
+              </div>
+              <p class="service-item-ttl">SNS広告運用</p>
+              <p class="service-item-text">
+                各種SNS広告やアドネットワークの中から目的やターゲットに最適な媒体を選定し、ターゲットに刺さるプロモーション施策を実現します。
               </p>
             </li>
           </ul>
@@ -299,7 +305,7 @@
       <div class="inner">
         <div class="about-text wow fadeIn" data-wow-offset="350">
           <div class="about-top">
-            <p><img src="./img/yourImage.png" alt="" class="about_img" /></p>
+            <p><img src="./img/ryota.JPG" alt="" class="about_img" /></p>
             <h3 class="name">
               <span class="name-l">迫間 亮太</span
               ><span class="name-s">Ryota Hazama</span>
@@ -310,29 +316,38 @@
             <div class="career">
               <h5>-経歴-</h5>
               <ul>
-                <li><p>これは例です</p></li>
-                <li><p>・2018年 大学でプログラミングを学ぶ</p></li>
-                <li><p>・2019年 セブ島へエンジニア留学</p></li>
-                <li><p>・2019年9月 自動車会社の自社開発インターン</p></li>
+                <li><p>・2015年 岡山大学工学部入学</p></li>
+                <li><p>・2015年 大学でプログラミングを学ぶ</p></li>
+                <li><p>・2019年 学生時代にWEB系のフリーランスとして活躍</p></li>
+                <li><p>・2020年4月 岡山大学工学部卒業</p></li>
+                <li><p>・2020年4月 株式会社日立システムズに入社</p></li>
+                <li><p>・2020年6月 技術力の物足りなさを感じ、株式会社日立システムズ退職</p></li>
+                <li><p>・2020年6月 東大発のベンチャー企業株式会社Sapeet入社</p></li>
                 <li>
                   <p>
-                    ・2020年9月
-                    フリーでWordPressサイト制作、LP制作、ツール制作を中心に活動中。
+                    ・2020年11月
+                    フリーランスとして独立
                   </p>
                 </li>
               </ul>
             </div>
             <div class="career">
               <h5>-活動拠点-</h5>
-              <p>東京（出身は千葉県）</p>
+              <p>東京</p>
             </div>
             <div class="career">
-              <h5>-想い-</h5>
+              <h5>-強み-</h5>
               <p>
-                私はお客様の想いを汲み取って、「あなただけのWebサイト」を真心込めて作成しております。
+                ・細かい修正から、0からのフルスクラッチでの構築まで幅広い範囲で機動力高く動けます。
               </p>
               <p>
-                一切の妥協もせず、お客様に寄り添ってサイト制作のお手伝いをさせていただきます。
+                ・私が率いているフリーランスチームがありますので、リソースの確保、素早い制作が可能です。
+              </p>
+              <p>
+                ・ビジネスにも精通したエンジニアになりたいという想いで活動してきましたので、ビジネス目線とエンジニア目線での両方からのご提案が可能です。
+              </p>
+              <p>
+                ・Twitterのフォロワーが4000人以上、インスタでのフォロワーが1600人以上ですので、SNS運用に関しては誰にも負けない自信があります。
               </p>
             </div>
           </div>
@@ -369,15 +384,9 @@
           </h5>
         </div>
         <div class="skill-item">
-          <i class="fab fa-bootstrap fa-2x"></i>
+          <i class="fab fa-aws fa-2x"></i>
           <h5 class="skill-name">
-            BOOTSTAP
-          </h5>
-        </div>
-        <div class="skill-item">
-          <i class="fab fa-sass fa-2x"></i>
-          <h5 class="skill-name">
-            SASS
+            AWS(各種サービス)
           </h5>
         </div>
         <div class="skill-item">
@@ -387,21 +396,27 @@
           </h5>
         </div>
         <div class="skill-item">
+          <i class="fab fa-react fa-2x"></i>
+          <h5 class="skill-name">
+            REACT
+          </h5>
+        </div>
+        <div class="skill-item">
+          <i class="fab fa-node fa-2x"></i>
+          <h5 class="skill-name">
+            NODE.JS
+          </h5>
+        </div>
+        <div class="skill-item">
           <i class="fab fa-php fa-2x"></i>
           <h5 class="skill-name">
             PHP
           </h5>
         </div>
         <div class="skill-item">
-          <i class="fab fa-wordpress fa-2x"></i>
+          <i class="fas fa-cart-arrow-down fa-2x"></i>
           <h5 class="skill-name">
-            WORDPRESS
-          </h5>
-        </div>
-        <div class="skill-item">
-          <i class="fab fa-adobe fa-2x"></i>
-          <h5 class="skill-name">
-            Ps/Ai/XD
+            Shopify/Liquid
           </h5>
         </div>
       </div>
@@ -421,13 +436,12 @@
       <div class="inner">
         <div class="contact-text">
           <p>
-            お仕事のご依頼・ご相談は<br />
-            TwitterのDMでもお受けいたしております。<br />
-            お気軽にお問い合わせください。<br />
-            メールでのお問い合わせは下記リンクよりお願いします。
+            電話でのお問い合わせ
           </p>
+          <h4 class ="tel">080-0000-0000</h4>
+          <p>メールでのお問い合わせは下記リンクからお問い合わせください</p>
         </div>
-        <a class="btn-link" href="./contact/index.html">
+        <a class="btn-link" href="./form/index.html">
           <div class="btn">ご連絡はこちらから</div>
         </a>
       </div>
@@ -443,7 +457,7 @@
             class="menu-item menu-item-type-custom menu-item-object-custom menu-item-224"
           >
             <a
-              href="#"
+              href="https://twitter.com/Ryota000666"
               target="_brank"
               rel="noopener noreferrer"
             >
@@ -491,15 +505,12 @@
     <!-- swiper初期化 -->
     <script>
       let mySwiper = new Swiper ('.swiper-container', {
-        // 以下にオプションを設定
         loop: true, //最後に達したら先頭に戻る
-        //ページネーション表示の設定
         pagination: {
           el: '.swiper-pagination', //ページネーションの要素
           type: 'bullets', //ページネーションの種類
           clickable: true, //クリックに反応させる
         },
-        //ナビゲーションボタン（矢印）表示の設定
         navigation: {
           nextEl: '.swiper-button-next', //「次へボタン」要素の指定
           prevEl: '.swiper-button-prev', //「前へボタン」要素の指定
